<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/landing_green">

        <ImageView
            android:id="@+id/tile_vin_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/car_inspection_icon"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tile_vin_guideline"
            app:layout_constraintHorizontal_weight="1"
            app:tint="@color/accent" />

        <TextView
            android:id="@+id/tile_vin_header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Vehicle identifier number"
            style="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintStart_toEndOf="@id/tile_vin_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tile_vin_text"
            android:gravity="end" />
        <TextView
            android:id="@+id/tile_vin_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintStart_toEndOf="@id/tile_vin_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tile_vin_editable_text"
            android:gravity="end" />

        <EditText
            android:id="@+id/tile_vin_editable_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="text"
            android:hint="Enter vin here"
            style="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tile_vin_edit_button"
            app:layout_constraintStart_toStartOf="@id/tile_vin_header_text" />
        <Button
            android:id="@+id/tile_vin_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Display1"
            android:text = "Edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tile_vin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>