<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".view.VehiclePropertiesPage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include
                    android:id="@+id/battery_level_tile"
                    layout="@layout/tile_battery_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <ProgressBar
                        android:id="@+id/battery_progress_bar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:progress="50"
                        android:progressDrawable="@drawable/green_progress_bar" />

                    <TextView
                        android:id="@+id/battery_progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:background="#00000000"
                        android:textSize="35sp" />
                </RelativeLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/battery_low_message_button"
                    style="@style/Theme.InfotAiMOS.Button"
                    android:backgroundTint="@color/landing_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_battery_low_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/delay"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/delay_spinner_vehicle_properties_page"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/delay_array"
                    android:layout_weight="0.6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/battery_level"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/battery_level_edittext"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/battery_level_percentage"
                    android:text="@string/battery_level_percentage"
                    android:autofillHints="False"
                    android:inputType="text"
                    android:minWidth="48dp"
                    android:layout_weight="0.6">
                </EditText>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/vin_tile"
                    layout="@layout/tile_vin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>